src/test/ui/qualified/qualified-path-params-2.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/qualified-path-params-2.rs:18:26
   |
LL | type A = <S as Tr>::A::f<u8>;
   |                          ^^ type parameter not allowed

error[E0223]: ambiguous associated type
  --> $DIR/qualified-path-params-2.rs:18:10
   |
LL | type A = <S as Tr>::A::f<u8>;
   |          ^^^^^^^^^^^^^^^^^^^ help: use fully-qualified syntax: `<<S as Tr>::A as Trait>::f`

error: aborting due to 2 previous errors

Some errors occurred: E0109, E0223.
For more information about an error, try `rustc --explain E0109`.
